doc: some generic error types
